# Ferdinand

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.raw-vps.yml  docker-compose.yml
anki_server/: Cargo.toml
anki_server/examples/: build_test_apkg.rs
anki_server/src/: admin.rs  bootstrap.rs  error.rs  lib.rs  main.rs  seed_notetypes.rs  state.rs  static_assets.rs
anki_server/src/auth/: db.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs  routes.rs  session_store.rs
anki_server/src/routes/: burn_recovery.rs  cards.rs  deck_config.rs  decks.rs  fsrs.rs  import.rs  media.rs  mod.rs  multipart_stream.rs  notes.rs  notetype_fields.rs  notetypes.rs  saved_searches.rs  stats.rs  study.rs  tags.rs
anki_server/tests/: back_html_strips_frontside.sh  cli_auth_endpoints.sh  cli_collection_arg.sh  cli_cors.sh  cli_login_rate_limit.sh  cli_media_streaming.sh  cli_secure_cookie_env.sh  cli_users_dir_arg.sh  fsrs_skip_persist_on_noop.sh  media_route.sh  notetype_in_summary.sh  state_concurrent_open.rs
data/sesame/: cards.jsonl  wordlist.jsonl
data/sesame_cloze/: cards.jsonl  wordlist.jsonl
data/toeic/: cards.jsonl  cloze_cards.jsonl  cloze_wordlist.jsonl  reading_wordlist.jsonl  wordlist.jsonl
decks/: sesame.json  sesame_cloze.json  toeic_vocab.json
deploy/: README.md
deploy/scripts/: backup.sh  bootstrap-vps.sh  init-env.sh  restore.sh  verify.sh
design_handoff_ferdinand/: README.md
design_handoff_ferdinand/source/: app.jsx  browse.jsx  dashboard.jsx  deck-options.jsx  design.html  login.jsx  notes.jsx  primitives.jsx  screenshot.html  session-end.jsx  settings.jsx  sketches.jsx  stats.jsx  study.jsx  type-options.jsx
docs/: ROADMAP.md  SETUP.md  sovits_recording_script_zh.md  sovits_training_setup.md
launchd/: README.md  com.ktwu.ferdinand.plist  install.sh  uninstall.sh
mockup/: .env.example  .gitignore  .yarnrc.yml  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
mockup/src/: app.css  app.html
mockup/src/lib/: api.test.ts  api.ts  auth.svelte.ts  data.ts  decks.test.ts  decks.ts  heatmap-layout.test.ts  stats.test.ts  stats.ts  study.test.ts  study.ts  theme.ts  tokens.css  tokens.test.ts  xhr-upload.test.ts  xhr-upload.ts
mockup/src/lib/browse/: BrowseRow.svelte  BrowseRow.test.ts  BrowseRowHarness.svelte  BrowseRowSkeleton.svelte  media.test.ts  media.ts
mockup/src/lib/card/: transformAnkiHtml.ts
mockup/src/lib/components/: BottomNav.svelte  Brand.svelte  Button.svelte  Card.svelte  CardFace.svelte  CardFace.test.ts  CardFaceHarness.svelte  ImportApkgPanel.skin.test.ts  ImportApkgPanel.svelte  Kbd.svelte  LiveIndicator.svelte  MobileTopBar.svelte  Sidebar.svelte  Sidebar.test.ts  Sparkline.svelte  ThemeToggle.svelte
mockup/src/lib/components/sketch/: FerdinandMark.svelte  Mark.svelte  SketchArrow.svelte  SketchBook.svelte  SketchCalendar.svelte  SketchCardStack.svelte  SketchCheck.svelte  SketchClock.svelte  SketchFlame.svelte  SketchGear.svelte  SketchGlobe.svelte  SketchLeaf.svelte  SketchLock.svelte  SketchMail.svelte  SketchOwl.svelte  SketchPlant.svelte  SketchPlus.svelte  SketchScribble.svelte  SketchSearch.svelte  SketchSpark.svelte  SketchSparkles.svelte  SketchUnderline.svelte  SketchUser.svelte  index.ts
mockup/src/lib/components/ui/: Btn.svelte  Caption.svelte  Chip.svelte  Divider.svelte  Field.svelte  index.ts  (+1 more)
mockup/src/routes/: +layout.svelte  +page.svelte  page.test.ts
mockup/src/routes/_skin_preview/: +page.svelte
mockup/src/routes/browse/: +page.svelte  page.test.ts
mockup/src/routes/login/: +page.svelte
mockup/src/routes/settings/: +page.svelte  page.test.ts
mockup/src/routes/stats/: +page.svelte
mockup/src/styles/: tokens.css  typography.css
mockup/src/test/: vitest-setup.ts
mockup/src/test/stubs/: app-environment.ts  app-navigation.ts  app-stores.ts  env-static-public.ts
mockup/tests/: cardface_layout.mjs  cardface_render.mjs
mockup/tests/e2e/: README-live-smoke.md  _skin_preview_screenshot.mjs  a10_settings_visual.mjs  a11_admin.mjs  a11b_admin_create_user.mjs  a12_apkg_import_api.mjs  a12b_apkg_import_ui.mjs  a13_live_multiuser_smoke.mjs  a14_live_iphone_safari_smoke.mjs  a1_browse_validation.mjs  a2_auth_endpoints.mjs  a3_frontend_login.mjs  a4_dashboard_visual.mjs  a5_study_visual.mjs  a6_browse_visual.mjs  a7_browse_toolbar.mjs  a8_stats_visual.mjs  a9_notes_new_visual.mjs  answer_flow_check.mjs  phaseC_audit.mjs  responsive_devices.mjs  web_acceptance.mjs
mockup/tests/fixtures/: sample.apkg
prompts/: sesame_card.md  sesame_cloze.md  toeic_card.md  toeic_cloze.md  toeic_reading.md
rslib/src/storage/revlog/: mod.rs
rslib_ffi/: Cargo.toml  build.rs  cbindgen.toml
rslib_ffi/src/: lib.rs
scripts/: _profile.py  backup_media.sh  bootstrap.sh  fix_image_fields.py  gen_card_images.py  gen_card_images_codex.py  gen_toeic_cards.py  gen_toeic_cloze.py  gen_toeic_reading.py  ingest_toeic_cards.py  ingest_toeic_cloze.py  ingest_toeic_reading.py  migrate_media_to_remote.py  seed_fake_reviews.py  validate_cards.py  verify_images.py
(+4 files in other folders)
