[package]
name = "anki_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
workspace = ".."
description = "HTTP + WebSocket server wrapping rslib for the web and iOS clients"

[[bin]]
name = "anki_server"
path = "src/main.rs"

[dependencies]
anki = { path = "../rslib", features = ["rustls"] }
anki_proto = { path = "../rslib/proto" }
anyhow.workspace = true
argon2.workspace = true
axum = { workspace = true }
base64.workspace = true
clap = { workspace = true }
mime_guess = "2"
regex.workspace = true
rusqlite.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros", "signal", "sync"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tower-sessions.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
include_dir = { version = "0.7", optional = true }
async-trait.workspace = true
time = { version = "0.3", features = ["serde"] }

[features]
default = []
# When enabled, the SvelteKit `mockup/build/` output is embedded into the
# binary at compile time (Phase 30-A: single-binary release). When disabled
# (default), `anki_server` will optionally serve `../mockup/build/` from disk
# if it exists at runtime — handy for `cargo run` during development.
embed-mockup = ["dep:include_dir"]
