[package]
name = "rslib_ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C ABI bridge from rslib to native Ferdinand clients (iOS/macOS first)"

[lib]
# staticlib for iOS/macOS app bundling (xcodebuild links the .a directly).
# cdylib for desktop smoke-testing on Linux/macOS via dlopen + nm.
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Phase 11-D: real collection access (open / close / deck_count).
# rustls feature mirrors anki_server so the two binaries share a TLS
# stack and we don't end up with a second copy of native-tls in the
# dependency tree.
anki = { path = "../rslib", features = ["rustls"] }
# Phase 13-D: deck_tree returns `anki_proto::decks::DeckTreeNode`; we
# need direct access to that proto type to walk the tree without
# converting through an opaque rslib wrapper.
anki_proto = { path = "../rslib/proto" }
# Phase 12-D: list_decks JSON round-trip across the FFI boundary so
# native callers don't need their own struct-marshalling layer.
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
